<resources>
    <string name="app_name">AppDemo2021</string>

    <string name="action_pantalla1">Pantalla 1</string>
    <string name="action_pantalla2">Pantalla 2</string>
    <string name="action_pantalla3">Pantalla 3</string>
    <string name="action_pantalla4">Pantalla 4</string>
    <string name="action_pantalla5">Pantalla 5</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>